# tauMidi

./: .gitignore  LICENSE  README.md  TauProjects.sln  VentrueProjects.sln
Tau/andstudio/Tau/app/src/main/cpp/: CMakeLists.txt
Tau/andstudio/Tau/app/src/main/cpp/JniUtils/: JniUtils.cpp  JniUtils.h
Tau/andstudio/Tau/app/src/main/cpp/jni/: jniBode.cpp  jniEqualizer.cpp  jniFilter.cpp  jniMorphLBHFilter.cpp  jniSoundFont.cpp  jniTau.cpp  jniTauEditor.cpp  native-lib.cpp
Tau/andstudio/Tau/app/src/main/cpp/jni/Editor/: jniCreateMidiEvent.cpp  jniCreateMidiEvent.h  jniEditor.cpp
Tau/andstudio/Tau/app/src/main/cpp/jni/FX/: jniCompressor.cpp  jniEffect.cpp  jniEqualizer.cpp  jniPcmRecorder.cpp  jniReverb.cpp  jniSpectrumVisual.cpp
Tau/andstudio/Tau/app/src/main/cpp/jni/Utils/Dsignal/: jniBode.cpp  jniFilter.cpp  jniMorphLBHFilter.cpp
Tau/andstudio/Tau/app/src/main/cpp/jni/Utils/FFT/: jniFFT.cpp
Tau/msvc/: Tau.sln
TauClr/: InstrumentSharp.cpp  InstrumentSharp.h  SoundFontSharp.cpp  SoundFontSharp.h  TauClr.vcxproj  TauClr.vcxproj.filters  TauSharp.cpp  TauSharp.h  Types.h
TauClrTest/: Form1.Designer.cs  Form1.cs  Program.cs  TauClrTest.csproj
TauClrTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
TauTest/: TauTest.cpp  TauTest.vcxproj  TauTest.vcxproj.filters
TauTest/SoundFont/: Velocity Grand Piano.sf2
TauTest/midi/: (ACG)芬兰梦境乐团-The Dawn《魔兽世界》亡灵序曲.mid  (SG)世界第一等.lrc  (SG)世界第一等.mid  (SG)世界第一等2.mid  (SG)世界第一等3.mid  (SG)世界第一等4.mid  (SG)世界第一等4s.mid  01-StartWithMiddleC.mid  01-StartWithMiddleCSingle.mid  02-ChordOfCMajor.mid  03-UpAndDown.mid  04-ClairDeLaLune.mid  05-ChordOfFMajor.mid  06-DownAndUp.mid  1.MID  113097.mid  2.MID  2013223214732.mid  3.MID  4.MID  5.MID  51131.mid  685936.mid  685936Test.mid  685936Test2.mid  Basic Bassline.mid  Basic Piano Chord.mid  Battle Against a True Hero.mid  FREE LOOP.mid  Fight.mid  FreeLoop2.mid  Here-We-Are-Again-喜剧之王插曲.mid  Hollow,Knight.mid  Just the Way You 2.mid  Just the Way You Are-Bruno Mars.mid  Just the Way You Are-Bruno Mars1.mid  Just the Way You Are-Bruno Mars2.mid  Just the Way You Are-Bruno Mars3.mid  Just the Way You Are-Bruno Mars4.mid  Lapran.mid  (+116 more)
Ventrue/msvc/: Ventrue.sln
VentrueTest/: VentrueTest.cpp  VentrueTest.vcxproj  VentrueTest.vcxproj.filters
VentrueTest/midi/: Undertale AU-Ink！Sans-MEGALOVANIA.mid  czh.mid  吻别.mid  狂妄errow.mid  狂妄之人.mid  狂妄之人hyb.mid  笑傲江湖2.mid  笑傲江湖3.mid  鱼姐 remix.mid
rtaudio/msvc/: rtaudio.vcxproj  rtaudio.vcxproj.filters
x64/Debug/: SDL2.exp  Tau.exp  Tau.lib  TauClr.dll.metagen  TauTest.exp  TauTest.lib  libogg.lib  libvorbis.exp  libvorbis.lib  libvorbisfile.lib  portaudio_x64.exp  portaudio_x64.lib  rtaudio_x64.exp  rtaudio_x64.lib
x64/Release/: SDL2.exp  SDL2.lib  Tau.exp  Tau.lib  TauTest.exp  TauTest.lib  libvorbisfile.exp  portaudio_x64.exp  rtaudio_x64.exp  rtaudio_x64.lib
(+871 files in other folders)
